created first elements of the project in html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     
+    <div class="container">
+<h1>Let's Split The Bill!</h1>
+<p>Bill 💰</p>
+<span>$</span>
+<input id="bill" placeholder="Bill">
+    </div>
+
 <script src="index.js"></script>
 </body>
 </html>
