created button with select options

--- a/index.html
+++ b/index.html
@@ -10,10 +10,27 @@
 <body>
     
     <div class="container">
+
+<form>
 <h1>Let's Split The Bill!</h1>
 <p>Bill 💰</p>
-<span>$</span>
+<span>💸</span>
 <input id="bill" placeholder="Bill">
+
+<p>😎 Number of people</p>
+<input id="people" placeholder="How many people?">
+<p>💗 Did you like our service? 💗</p>
+
+<button id="addTip">Add a tip! </button><br>
+<select id="tip">
+<option disabled>Select an option</option>
+<option>Wow! 30%💗</option>
+<option>Good service! 20% 💙</option>
+<option>It was OK. 10% 🙂</option>
+<option>No Tips 🤦‍♀️</option>
+</select>
+</form>
+
     </div>
 
 <script src="index.js"></script>
