styled background in CSS

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 <h1>Let's Split The Bill!</h1>
 <p>Bill 💰</p>
 <span>💸</span>
-<input id="bill" placeholder="Bill">
+<input id="bill" placeholder="Total amount of the bill">
 
-<p>😎 Number of people</p>
+<p>👯 Number of people</p>
 <input id="people" placeholder="How many people?">
 <p>💗 Did you like our service? 💗</p>
 
-<button id="addTip">Add a tip! </button>
+<button id="addTip">Add a tip!</button>
 <select id="tip">
 <option disabled>Select an option</option>
-<option>Wow! 30%💗</option>
-<option>Good service! 20% 💙</option>
+<option>Wow! 30% 😍</option>
+<option>Good service! 20% 💜</option>
 <option>It was OK. 10% 🙂</option>
 <option>No Tips 🤦‍♀️</option>
 </select>
