continue to style elements: buttons, form

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 <form>
 <h1>Let's Split The Bill!</h1>
 <p>Bill 💰</p>
-<span>💸</span>
-<input id="bill" placeholder="Total amount of the bill">
+<span>💸
+<input id="bill" placeholder="What is the total amount of the bill?">
+</span>
 
 <p>👯 Number of people</p>
 <input id="people" placeholder="How many people?">
