--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div class="container">
 
 <form>
-<h1>Let's Split Our Bill 💰</h1>
+<h1>Let's Split Your Bill 💰</h1>
 <p>Bill 💸</p>
 <input id="bill" placeholder="Enter amount of the bill...">
 
 <p>Besties 👯🏼</p>
 <input id="people" placeholder="Enter number of people...">
-<p>💗 Did you like our service? 💗</p>
+<p>Are you satisfied with our service? ⭐</p>
 
 <button id="addTip">Add a tip!</button>
 <select id="tip">
@@ -41,21 +41,21 @@
         <p>Bill</p>
         <span>💲</span>
         <span id="dividedBill"></span>
-        <span>per person</span>
+        <span id="person">per person</span>
     </div>
 
     <div id="tipSplit">
         <p>Tip</p>
         <span>💲</span>
         <span id="dividedTips"></span>
-        <span>per person</span>
+        <span id="person">per person</span>
     </div>
 
     <div id="totalSplit">
         <p>Total</p>
         <span>💲</span>
         <span id="totalBill"></span>
-        <span>per person</span>
+        <span id="person">per person</span>
     </div>
 </div>
 
