created function calculateAmount, used methods querySelector and addEventListener

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
         <span id="person">per person</span>
     </div>
 </div>
+ 
+<div class="footer">
+    <span>Copyright © | Coded by Yuliia Zaharia</span>
+</div>
 
     </div>
 
