added value to option in HTML

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 <button id="addTip">Add a tip!</button>
 <select id="tip">
 <option disabled>Select an option</option>
-<option>Wow! 30% 😍</option>
-<option>Good service! 20% 💜</option>
-<option>It was OK. 10% 🙂</option>
-<option selected>No Tips 🤦‍♀️</option>
+<option value="0.30">Wow! 30% 😍</option>
+<option value="0.20">Good service! 20% 💜</option>
+<option value="0.10">It was OK. 10% 🙂</option>
+<option value="0.00" selected>No Tips 🤦‍♀️</option>
 </select>
 
 <button id="btn">Calculate!</button>
